Split settings fxml into fragments

--- a/app/gui/src/main/java/pl/marcinchwedczuk/rfid/gui/settings/SettingsWindow.fxml
+++ b/app/gui/src/main/java/pl/marcinchwedczuk/rfid/gui/settings/SettingsWindow.fxml
@@ -4,8 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Text?>
-<AnchorPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="pl.marcinchwedczuk.rfid.gui.settings.SettingsWindow">
+<AnchorPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <VBox spacing="10.0">
             <children>
@@ -26,204 +25,8 @@
                         </AnchorPane>
                     </content>
                 </TitledPane>
-                <HBox spacing="10.0" VBox.vgrow="NEVER">
-                    <children>
-                        <VBox>
-                            <children>
-                                <TitledPane animated="false" collapsible="false"
-                                            text="Request LED blinking &amp; Buzzer buzzing...">
-                                    <content>
-                                        <AnchorPane minHeight="0.0" minWidth="0.0">
-                                            <children>
-                                                <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                                          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                                    <columnConstraints>
-                                                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES"
-                                                                           minWidth="10.0"/>
-                                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0"
-                                                                           minWidth="10.0"
-                                                                           prefWidth="12.999992370605469"/>
-                                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-                                                    </columnConstraints>
-                                                    <rowConstraints>
-                                                        <RowConstraints minHeight="10.0" prefHeight="30.0"
-                                                                        vgrow="SOMETIMES"/>
-                                                        <RowConstraints minHeight="10.0" prefHeight="30.0"
-                                                                        vgrow="SOMETIMES"/>
-                                                        <RowConstraints minHeight="10.0" prefHeight="30.0"
-                                                                        vgrow="SOMETIMES"/>
-                                                        <RowConstraints minHeight="10.0" prefHeight="30.0"
-                                                                        vgrow="SOMETIMES"/>
-                                                        <RowConstraints minHeight="10.0" prefHeight="30.0"
-                                                                        vgrow="SOMETIMES"/>
-                                                        <RowConstraints minHeight="10.0" prefHeight="30.0"
-                                                                        vgrow="SOMETIMES"/>
-                                                        <RowConstraints minHeight="10.0" prefHeight="30.0"
-                                                                        vgrow="SOMETIMES"/>
-                                                        <RowConstraints minHeight="10.0" prefHeight="30.0"
-                                                                        vgrow="SOMETIMES"/>
-                                                        <RowConstraints vgrow="SOMETIMES"/>
-                                                        <RowConstraints minHeight="10.0" prefHeight="30.0"
-                                                                        vgrow="SOMETIMES"/>
-                                                        <RowConstraints minHeight="10.0" prefHeight="30.0"
-                                                                        vgrow="SOMETIMES"/>
-                                                        <RowConstraints minHeight="10.0" prefHeight="30.0"
-                                                                        vgrow="SOMETIMES"/>
-                                                        <RowConstraints minHeight="10.0" prefHeight="30.0"
-                                                                        vgrow="SOMETIMES"/>
-                                                        <RowConstraints vgrow="SOMETIMES"/>
-                                                        <RowConstraints vgrow="SOMETIMES"/>
-                                                    </rowConstraints>
-                                                    <children>
-                                                        <Label text="Final State: Red LED:"/>
-                                                        <ChoiceBox fx:id="finalRedLedCB" prefWidth="150.0"
-                                                                   GridPane.columnIndex="2"/>
-                                                        <Label text="Final State: Green LED:" GridPane.rowIndex="1"/>
-                                                        <Label text="State Mask: Red LED:" GridPane.rowIndex="2"/>
-                                                        <Label text="State Mask: Green LED:" GridPane.rowIndex="3"/>
-                                                        <Label text="Initial Blinking State: Red LED:"
-                                                               GridPane.rowIndex="4"/>
-                                                        <Label text="Initial Blinking State: Green LED:"
-                                                               GridPane.rowIndex="5"/>
-                                                        <Label text="Blinking Mask: Red LED:" GridPane.rowIndex="6"/>
-                                                        <Label text="Blinking Mask: Green LED:" GridPane.rowIndex="7"/>
-                                                        <ChoiceBox fx:id="finalGreenLedCB" prefWidth="150.0"
-                                                                   GridPane.columnIndex="2" GridPane.rowIndex="1"/>
-                                                        <ChoiceBox fx:id="maskRedLedCB" prefWidth="150.0"
-                                                                   GridPane.columnIndex="2" GridPane.rowIndex="2"/>
-                                                        <ChoiceBox fx:id="maskGreenLedCB" prefWidth="150.0"
-                                                                   GridPane.columnIndex="2" GridPane.rowIndex="3"/>
-                                                        <ChoiceBox fx:id="blinkingRedLedCB" prefWidth="150.0"
-                                                                   GridPane.columnIndex="2" GridPane.rowIndex="4"/>
-                                                        <ChoiceBox fx:id="blinkingGreenLedCB" prefWidth="150.0"
-                                                                   GridPane.columnIndex="2" GridPane.rowIndex="5"/>
-                                                        <ChoiceBox fx:id="blinkingMaskRedLedCB" prefWidth="150.0"
-                                                                   GridPane.columnIndex="2" GridPane.rowIndex="6"/>
-                                                        <ChoiceBox fx:id="blinkingMaskGreenLedCB" prefWidth="150.0"
-                                                                   GridPane.columnIndex="2" GridPane.rowIndex="7"/>
-                                                        <Separator GridPane.columnSpan="2147483647"
-                                                                   GridPane.rowIndex="8">
-                                                            <padding>
-                                                                <Insets bottom="10.0" top="10.0"/>
-                                                            </padding>
-                                                        </Separator>
-                                                        <Label text="T1 Duration (unit = 100ms):"
-                                                               GridPane.rowIndex="9"/>
-                                                        <Label text="T2 Duration (unit = 100ms):"
-                                                               GridPane.rowIndex="10"/>
-                                                        <Label text="Number of repetitions:" GridPane.rowIndex="11"/>
-                                                        <Label text="Link to Buzzer:" GridPane.rowIndex="12"/>
-                                                        <Spinner fx:id="t1Spinner" GridPane.columnIndex="2"
-                                                                 GridPane.rowIndex="9"/>
-                                                        <Spinner fx:id="t2Spinner" GridPane.columnIndex="2"
-                                                                 GridPane.rowIndex="10"/>
-                                                        <Spinner fx:id="repetitionsSpinner" GridPane.columnIndex="2"
-                                                                 GridPane.rowIndex="11"/>
-                                                        <ChoiceBox fx:id="linkToBuzzerCB" prefWidth="150.0"
-                                                                   GridPane.columnIndex="2" GridPane.rowIndex="12"/>
-                                                        <Separator GridPane.columnSpan="2147483647"
-                                                                   GridPane.rowIndex="13">
-                                                            <padding>
-                                                                <Insets bottom="10.0" top="10.0"/>
-                                                            </padding>
-                                                        </Separator>
-                                                        <HBox alignment="CENTER_RIGHT" GridPane.columnSpan="2147483647"
-                                                              GridPane.rowIndex="14">
-                                                            <children>
-                                                                <Button mnemonicParsing="false"
-                                                                        onAction="#sendBlinkBuzzCommand"
-                                                                        text="Send command"/>
-                                                            </children>
-                                                        </HBox>
-                                                    </children>
-                                                </GridPane>
-                                            </children>
-                                        </AnchorPane>
-                                    </content>
-                                </TitledPane>
-                            </children>
-                        </VBox>
-                        <TitledPane animated="false" collapsible="false" text="PICC Parameters">
-                            <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0">
-                                    <children>
-                                        <GridPane layoutX="-44.0" layoutY="-34.0" AnchorPane.bottomAnchor="0.0"
-                                                  AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                                                  AnchorPane.topAnchor="0.0">
-                                            <columnConstraints>
-                                                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES"
-                                                                   minWidth="10.0"/>
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0"
-                                                                   prefWidth="15.0"/>
-                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-                                            </columnConstraints>
-                                            <rowConstraints>
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                                <RowConstraints vgrow="SOMETIMES"/>
-                                                <RowConstraints vgrow="SOMETIMES"/>
-                                            </rowConstraints>
-                                            <children>
-                                                <Label text="Auto PICC Polling:"/>
-                                                <Label text="Auto ATS Generation:" GridPane.rowIndex="1"/>
-                                                <Label text="Polling Interval:" GridPane.rowIndex="2"/>
-                                                <Label text="FeliCa 424K:" GridPane.rowIndex="3"/>
-                                                <Label text="FeliCa 212K:" GridPane.rowIndex="4"/>
-                                                <Label text="Topaz:" GridPane.rowIndex="5"/>
-                                                <Label text="ISO 14443 Type B:" GridPane.rowIndex="6"/>
-                                                <Label text="ISO 14443 Type A:" GridPane.rowIndex="7">
-                                                    <tooltip>
-                                                        <Tooltip
-                                                                text="To detect the MIFARE Tags, the Auto ATS Generation must be disabled first.To detect the MIFARE Tags, the Auto ATS Generation must be disabled first."
-                                                                wrapText="true"/>
-                                                    </tooltip>
-                                                </Label>
-                                                <ChoiceBox fx:id="autoPiccPooling" prefWidth="150.0"
-                                                           GridPane.columnIndex="2"/>
-                                                <ChoiceBox fx:id="autoAtsGeneration" prefWidth="150.0"
-                                                           GridPane.columnIndex="2" GridPane.rowIndex="1"/>
-                                                <ChoiceBox fx:id="pollingInterval" prefWidth="150.0"
-                                                           GridPane.columnIndex="2" GridPane.rowIndex="2"/>
-                                                <ChoiceBox fx:id="feliCa424K" prefWidth="150.0"
-                                                           GridPane.columnIndex="2" GridPane.rowIndex="3"/>
-                                                <ChoiceBox fx:id="feliCa212K" prefWidth="150.0"
-                                                           GridPane.columnIndex="2" GridPane.rowIndex="4"/>
-                                                <ChoiceBox fx:id="topaz" prefWidth="150.0" GridPane.columnIndex="2"
-                                                           GridPane.rowIndex="5"/>
-                                                <ChoiceBox fx:id="isoTypeB" prefWidth="150.0"
-                                                           GridPane.columnIndex="2" GridPane.rowIndex="6"/>
-                                                <ChoiceBox fx:id="isoTypeA" prefWidth="150.0"
-                                                           GridPane.columnIndex="2" GridPane.rowIndex="7"/>
-                                                <Separator GridPane.columnSpan="2147483647" GridPane.rowIndex="8">
-                                                    <padding>
-                                                        <Insets bottom="10.0" top="10.0"/>
-                                                    </padding>
-                                                </Separator>
-                                                <HBox alignment="CENTER_RIGHT" spacing="10.0"
-                                                      GridPane.columnSpan="2147483647" GridPane.rowIndex="9">
-                                                    <children>
-                                                        <Button minWidth="100.0" mnemonicParsing="false"
-                                                                onAction="#refreshPICC" text="Refresh"/>
-                                                        <Button minWidth="100.0" mnemonicParsing="false"
-                                                                onAction="#savePICC" text="Save"/>
-                                                    </children>
-                                                </HBox>
-                                            </children>
-                                        </GridPane>
-                                    </children>
-                                </AnchorPane>
-                            </content>
-                            <HBox.margin>
-                                <Insets/>
-                            </HBox.margin>
-                        </TitledPane>
-                    </children>
+                <HBox fx:id="childPanesContainer" spacing="10.0" VBox.vgrow="NEVER">
+
                 </HBox>
                 <HBox alignment="CENTER_RIGHT" spacing="10.0" VBox.vgrow="NEVER">
                     <children>
