--- a/app/gui/src/main/java/pl/marcinchwedczuk/rfid/gui/sender/SenderWindow.fxml
+++ b/app/gui/src/main/java/pl/marcinchwedczuk/rfid/gui/sender/SenderWindow.fxml
@@ -3,12 +3,14 @@
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
 <?import pl.marcinchwedczuk.rfid.gui.controls.banner.Banner?>
+
 <AnchorPane prefHeight="668.0" prefWidth="608.0" stylesheets="@SenderWindow.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <opaqueInsets>
       <Insets />
@@ -16,19 +18,36 @@
    <children>
       <VBox prefHeight="381.0" prefWidth="608.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <TextArea fx:id="outputTextArea" editable="false" VBox.vgrow="ALWAYS">
-               <styleClass>
-                  <String fx:value="output" />
-                  <String fx:value="byteEditor" />
-               </styleClass>
-            </TextArea>
-            <Banner fx:id="errorBanner" type="ERROR" VBox.vgrow="NEVER" />
-            <TextArea fx:id="inputTextArea" minHeight="-Infinity" styleClass="byteEditor" minWidth="-Infinity" prefHeight="150.0" VBox.vgrow="NEVER" />
+            <SplitPane dividerPositions="0.7" orientation="VERTICAL" VBox.vgrow="ALWAYS">
+              <items>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                     <children>
+                        <TextArea fx:id="outputTextArea" editable="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <styleClass>
+                              <String fx:value="output" />
+                              <String fx:value="byteEditor" />
+                           </styleClass>
+                        </TextArea>
+                     </children>
+                  </AnchorPane>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                     <children>
+                        <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <Banner fx:id="errorBanner" type="ERROR" VBox.vgrow="NEVER" />
+                              <TextArea fx:id="inputTextArea" styleClass="byteEditor" VBox.vgrow="ALWAYS" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </AnchorPane>
+              </items>
+            </SplitPane>
             <HBox spacing="10.0" VBox.vgrow="NEVER">
                <children>
-                  <HBox HBox.hgrow="ALWAYS">
+                  <HBox alignment="CENTER_LEFT" spacing="10.0" HBox.hgrow="ALWAYS">
                      <children>
                         <Button cancelButton="true" minWidth="100.0" mnemonicParsing="false" onAction="#close" text="Close" />
+                        <CheckBox fx:id="clearOnSendFlag" mnemonicParsing="false" text="Clear on send" />
                      </children>
                   </HBox>
                   <Button minWidth="100.0" mnemonicParsing="false" onAction="#clear" text="Clear" />
